<resources>
    <string name="app_name">YYReader</string>
    <string name="book_shelf_bottom_title">书架</string>
    <string name="book_shelf_toolbar_title">我的书架</string>
    <string name="book_store_toolbar_title">书城</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_shelf">我的书架</string>
    <string name="bottom_store">书城</string>
    <string name="bottom_self">我的</string>

    <!--阅读界面设置菜单-->
    <string name="read_setting_category">目录</string>
    <string name="read_setting_night">夜间</string>
    <string name="read_setting_setting">设置</string>
    <string name="read_setting_brightness">亮度</string>
    <string name="read_top_error">报错</string>
    <string name="read_top_change">换源</string>
    <string name="read_top_refresh">刷新</string>

    <!--主界面-更多设置-->
    <string name="more_setting1">整理书架</string>
    <string name="more_setting2">本地导入</string>
    <string name="more_setting3">Txt下载</string>
    <string name="more_setting_cancel">取消</string>


    <!--我的-button文字-->
    <string name="me_reflect">帮助与反馈</string>
    <string name="me_cache">缓存管理</string>
    <string name="me_self">个人中心</string>
    <string name="me_about">猜你喜欢</string>
    <string name="me_setting">设置</string>


    <!--书城 精选-->
    <string name="title1">排行榜</string>
    <string name="title2">分类</string>
    <string name="title3">推荐</string>
    <string name="title4">搜索</string>
    <string name="title5">精选</string>
    <string name="book_detail.chase_update">追更</string>
    <string name="book_detail.give_up">放弃</string>
    <string name="book.word">|&#160;%1$d&#160;万字</string>
    <string name="book_detail.community">%1$s的社区</string>
    <string name="book_detail.posts_count">共有%1$d个帖子</string>

    <!--用户的等级信息-->
    <string name="user.lv">&#160;lv.%1$d</string>

    <string name="result_title">扫一扫登录</string>
    <string name="setup_title">设置</string>
    <string name="scan_title">扫一扫</string>

</resources>