<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@id/part2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/classfy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/more_setting_item_padding"
                android:textColor="@color/colorSkyBlue"
                android:text="@string/more_setting1"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:textAlignment="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.01dp"
                android:background="@color/light_gray" />

            <Button
                android:id="@+id/localBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/more_setting_item_padding"
                android:textColor="@color/colorSkyBlue"
                android:background="@color/colorWhite"
                android:text="@string/more_setting2"
                android:gravity="center"
                android:textAlignment="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/light_gray" />

            <Button
                android:id="@+id/txtDownload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/more_setting_item_padding"
                android:textColor="@color/colorSkyBlue"
                android:background="@color/colorWhite"
                android:text="@string/more_setting3"
                android:gravity="center"
                android:textAlignment="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/light_gray" />
        </LinearLayout>



    </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/part2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/more_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/btn_round_corner"
                android:textColor="#E91E63"
                android:text="@string/more_setting_cancel"
                android:gravity="center"
                android:textAlignment="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray" />
        </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>