<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/expanded_toolbar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!--        <android.support.design.widget.CollapsingToolbarLayout-->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorSkyBlue"
            app:statusBarScrim="@color/colorWhite"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

            <yzl.swu.yyreader.views.MyToolbar
                android:id="@+id/stuff_container"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cat_avatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/head_icon"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cat_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="泪无痕"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"/>
                </LinearLayout>
            </yzl.swu.yyreader.views.MyToolbar>



        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F0F3F6"
            android:orientation="vertical"
            >


            <LinearLayout style="@style/wrap_layout">
                <!-- 上圆角-->
                <LinearLayout
                    android:id="@+id/menu_cart"
                    style="@style/top_layout">

                    <TextView
                        style="@style/usertext"
                        android:text="@string/me_reflect"/>

                    <ImageView style="@style/img_arrow"/>
                </LinearLayout>

                <!-- 分割线 -->
                <View style="@style/bg_line"/>
                <!-- 无圆角-->
                <LinearLayout
                    android:id="@+id/menu_bought"
                    style="@style/mid_layout">

                    <TextView
                        style="@style/usertext"
                        android:text="@string/me_cache"/>

                    <ImageView style="@style/img_arrow"/>
                </LinearLayout>

                <View style="@style/bg_line"/>
                <!-- 下圆角-->
                <LinearLayout
                    android:id="@+id/menu_user"
                    style="@style/bottom_layout">

                    <TextView
                        style="@style/usertext"
                        android:text="@string/me_self"/>

                    <ImageView style="@style/img_arrow"/>
                </LinearLayout>

            </LinearLayout>


            <!-- 全圆角-->
            <LinearLayout style="@style/wrap_layout">

                <LinearLayout
                    android:id="@+id/menu_about"
                    style="@style/single_layout">

                    <TextView
                        style="@style/usertext"
                        android:text="@string/me_about"/>

                    <ImageView style="@style/img_arrow"/>
                </LinearLayout>

            </LinearLayout>

            <!-- 全圆角-->
            <LinearLayout style="@style/wrap_layout">

                <LinearLayout
                    android:id="@+id/menu_setting"
                    style="@style/single_layout"
                    >

                    <TextView
                        style="@style/usertext"
                        android:text="@string/me_setting"/>

                    <ImageView style="@style/img_arrow"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>