<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.youth.banner.Banner
                    android:id="@+id/ad_banner"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="10dp"
                    app:layout_constraintDimensionRatio="718:303"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/l1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/l2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ad_banner"
                    app:layout_constraintVertical_bias="0.0">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/remote"
                        tools:layout_editor_absoluteX="77dp"
                        tools:layout_editor_absoluteY="443dp" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/title1"
                        tools:layout_editor_absoluteX="85dp"
                        tools:layout_editor_absoluteY="546dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/l1"
                    app:layout_constraintEnd_toStartOf="@+id/l3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/l1"
                    app:layout_constraintTop_toTopOf="@+id/l1">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/collect"
                        tools:layout_editor_absoluteX="77dp"
                        tools:layout_editor_absoluteY="443dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/title2"
                        tools:layout_editor_absoluteX="85dp"
                        tools:layout_editor_absoluteY="546dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l3"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/l2"
                    app:layout_constraintEnd_toStartOf="@+id/l4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/l2"
                    app:layout_constraintTop_toTopOf="@+id/l2">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/score"
                        tools:layout_editor_absoluteX="77dp"
                        tools:layout_editor_absoluteY="443dp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/title3"
                        tools:layout_editor_absoluteX="85dp"
                        tools:layout_editor_absoluteY="546dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l4"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/l3"
                    app:layout_constraintEnd_toStartOf="@+id/l5"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/l3"
                    app:layout_constraintTop_toTopOf="@+id/l3">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/finished"
                        tools:layout_editor_absoluteX="77dp"
                        tools:layout_editor_absoluteY="443dp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/title4"
                        tools:layout_editor_absoluteX="85dp"
                        tools:layout_editor_absoluteY="546dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l5"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/l4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/l4"
                    app:layout_constraintTop_toTopOf="@+id/l4">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/hot"
                        tools:layout_editor_absoluteX="77dp"
                        tools:layout_editor_absoluteY="443dp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/title5"
                        tools:layout_editor_absoluteX="85dp"
                        tools:layout_editor_absoluteY="546dp" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/hot_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/l1">

                    <ImageView
                        android:id="@+id/title_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_hot"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/title_tv"/>

                    <TextView
                        android:id="@+id/title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/title_icon"
                        android:text="热门连载"
                        android:textColor="@color/color_black"
                        android:textSize="18sp"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/more_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="更多>"
                        android:textColor="@color/light_gray"
                        android:textSize="15sp"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/books_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/title_tv"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/high_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/hot_group">

                    <ImageView
                        android:id="@+id/title_icon2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_hot"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/title_tv2"/>

                    <TextView
                        android:id="@+id/title_tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/title_icon2"
                        android:text="高分神作"
                        android:textColor="@color/color_black"
                        android:textSize="18sp"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/more_tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="更多>"
                        android:textColor="@color/light_gray"
                        android:textSize="15sp"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/books_rv2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/title_tv2"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>